# hw-conduit-merges

./: .ghc.environment.x86_64-darwin-8.4.4  .ghc.environment.x86_64-darwin-8.6.5  .ghc.environment.x86_64-darwin-8.8.3  .gitignore  README.md  circle.yml  hw-conduit-merges.cabal  package.yaml  stack.yaml
.circleci/: config.yml
src/HaskellWorks/Data/Conduit/: Merge.hs
test/HaskellWorks/Data/Conduit/: LeftoverSpec.hs  MergeSpec.hs
