name:                hw-conduit-merges
version:             0.1.0.0
synopsis:            Additional merges and joins for Conduit
description:         Please see README.md
homepage:            https://github.com/packetloop/hw-conduit-merges#readme
author:              Alexey Raga
maintainer:          alexey.raga@gmail.com
copyright:           Alexey Raga
category:            Data, Conduit
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     HaskellWorks.Data.Conduit.Merge
  build-depends:       base >= 4.7 && < 5,
                       conduit,
                       conduit-extra,
                       mtl
  default-language:    Haskell2010

test-suite hw-conduit-merges-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HaskellWorks.Data.Conduit.MergeSpec
  build-depends:       base
                     , bytestring
                     , conduit
                     , conduit-extra
                     , hw-conduit-merges
                     , hspec
                     , mtl
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-type-defaults
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-conduit-merges
